; ModuleID = '/home/carl/AnghaBench/kcp/extr_ikcp.c_ikcp_decode16u.c'
source_filename = "/home/carl/AnghaBench/kcp/extr_ikcp.c_ikcp_decode16u.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i16*)* @ikcp_decode16u to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ikcp_decode16u(i8* %0, i16* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i16*, align 8
  store i8* %0, i8** %3, align 8
  store i16* %1, i16** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to i16*
  %7 = load i16, i16* %6, align 2
  %8 = load i16*, i16** %4, align 8
  store i16 %7, i16* %8, align 2
  %9 = load i8*, i8** %3, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 2
  store i8* %10, i8** %3, align 8
  %11 = load i8*, i8** %3, align 8
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
